[project]
name = "langraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "ipython>=9.11.0",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai>=1.1.11",
    "langchain-together>=0.0.2.post1",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.18",
    "langgraph-sdk>=0.3.11",
    "langgraph-supervisor>=0.0.31",
    "langgraph-swarm>=0.1.0",
    "langsmith>=0.7.20",
    "notebook>=7.5.5",
    "openai>=2.29.0",
    "openevals>=0.1.3",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uuid>=1.30",
]
