[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-agent system using LangGraph, A2A, FastMCP, Ollama, and uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.25",
    "fastapi>=0.135.1",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.20",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "click>=8.0.0",
    "langchain-openai>=1.2.1",
    "langchain-google-genai>=4.2.2",
    "langchain-anthropic>=1.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
